--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Cormorant Garamond", "Georgia", serif;
-  background-color: #fff;
+  background-color: #faf9f7;  /* soft warm white */
   color: #111;
   line-height: 1.6;
 }
+
 
 h1, h2, h3, h4 {
   font-weight: 500;
