--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ body:not(.index-page) .gallery {
 strong {
   font-weight: 500;
   color: #000;
+}
   /* === LIGHTBOX (full-screen image viewer) === */
 .lightbox {
   position: fixed;
